--- a/thrift/frontend/package.json
+++ b/thrift/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.0.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.13",
@@ -28,7 +29,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^6.23.0",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.4"
   }
