--- a/thrift/frontend/package.json
+++ b/thrift/frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-serialize": "^0.2.1",
     "react-snap-carousel": "^0.4.0"
   },
   "devDependencies": {
